# python-ppa

./: LICENSE  README.md  pyproject.toml
.github/: CODEOWNER
.github/workflows/: deploy.yml
ppa/: __init__.py  config.py
ppa/mongo/: __init__.py  interface.py
