[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "python-jpa"
version = "0.0.1"
description = "JPA-like ORM for Python"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Pratyush Kumar" }
]

[tool.setuptools]
packages = ["jpa"]