[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "python-ppa"
version = "VERSION"
description = "JPA-like ORM for Python"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Pratyush Kumar" }
]
# Add this block to auto-install your core library requirements
dependencies = [
    "annotated-types==0.7.0",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "idna==3.18",
    "pydantic==2.13.4",
    "pydantic_core==2.46.4",
    "pymongo==4.17.0",
    "python-dotenv==1.2.2",
    "PyYAML==6.0.3",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0"
]

[tool.setuptools.packages.find]
# Automatically discover the 'ppa' package and its nested subpackages (like mongo)
include = ["ppa*"]